--- a/b1/index.html
+++ b/b1/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Dury</h1>
+    <h1 style="color: red;"> Dury </h1>
+    <h2 style="color: skyblue;"> Hello, my name is Dury, nice to meet you </h2>
+    
 </body>
 </html>
