--- a/b2/btvn/bai2/index.html
+++ b/b2/btvn/bai2/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <a href="">Trang chủ</a>|
-        <a href="http://127.0.0.1:5500/b2/btvn/bai1/index.html">Giới thiệu</a>|
+        <a href="https://buithuyduong.github.io/web_hit_2025/b2/btvn/bai1/index.html">Giới thiệu</a>|
         <a href="">Bài viết</a>|
         <a href="">Liên hệ</a>
     </nav>
